# social-data-crawler

./: .env.example  .gitignore  ARCHITECTURE_ANALYSIS.md  FIRECRAWL_COMPARISON.md  PROJECT_INTRO.md  README.md  SKILL.md  linkedin.auto-browser.json  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-ocr.txt  requirements.txt
SKILLS/crawl4ai/: SKILL.md
auto-browser/: SKILL.md
auto-browser/tests/: test_vrd.py
crawler/: cli.py  contracts.py  submission_export.py
crawler/core/: dispatcher.py  pipeline.py  progress.py
data/: sample_linkedin_records.jsonl  sample_records.jsonl
docs/: integration-capability-matrix-2026-03-31.md  project-context-repomix.xml  project-overview.md  skill-overview.md  social-data-crawler-project-introduction-2026-04-01.md  功能与代码索引.md  字段对比-产品目录-API与Playwright.md  字段对比-数据集产品目录与-Skill.md
md文档/: Data-Mining-Protocol-V1.7.md  Platform-Service-API-测试报告-2026-03-29.md  Platform-Service-API-测试方案.md  Platform-Service-待实现功能清单-2026-03-29.md  core_service_e2e_test_cases.md  mining_service_e2e_test_cases.md  plugin_api_checklist.md  protocol_feature_checklist.md  skill-插件-Platform-Service-补充联调记录-2026-03-29.md  skill_feature_checklist.md  skill使用体验优化方案-2026-03-29.md  url_discovery_merge_plan.md  五平台API数据完整性复测-2026-03-29.md  插件-skill-Platform闭环完成记录-2026-03-29.md  联调测试执行记录-2026-03-29.md  联调测试指导清单.md
scripts/: bootstrap.cmd  bootstrap.ps1  bootstrap.sh  build_openclaw_plugin.py  host_diagnostics.py  install_openclaw_integration.ps1  install_openclaw_integration.py  install_openclaw_integration.sh  smoke_test.py  verify_env.py
(+350 files in other folders)
