[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "social-data-crawler"
version = "0.1.0"
description = "Agent-first crawler and enrichment skill for Wikipedia, arXiv, Amazon, Base, and LinkedIn"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["crawler/tests"]
python_files = ["test_*.py"]
